forgejo/all.tmp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:12
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - name: forgejo-data
              mountPath: /data
            - name: timezone
              mountPath: /etc/timezone
              subPath: timezone
              readOnly: true
      volumes:
        - name: forgejo-data
          persistentVolumeClaim:
            claimName: forgejo-data-pvc
        - name: timezone
          configMap:
            name: timezone-config
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-service
spec:
  selector:
    app: forgejo
  ports:
    - name: web
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 222
      targetPort: 22
  type: NodePort
