forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: NodePort
  ports:
    - name: web
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 30202
      targetPort: 22
      nodePort: 30202
